Архитектура проекта перестроена с учетом рекомендаций. Начаты попытки работы над документацией в swagger core
