# src/main/java/ru/jawaprog/test_task/web/controllers/PhoneNumbersController.java
@@ -1,6 +1,19 @@
 package ru.jawaprog.test_task.web.controllers;
 
-/*
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+import ru.jawaprog.test_task.dao.entities.PhoneNumberDAO;
+import ru.jawaprog.test_task.services.AccountsService;
+import ru.jawaprog.test_task.services.PhoneNumbersService;
+import ru.jawaprog.test_task.web.entities.AccountDTO;
+import ru.jawaprog.test_task.web.entities.PhoneNumberDTO;
+
+import java.util.Collection;
+import java.util.List;
+
 @RestController
 @RequestMapping("phone-numbers")
 public class PhoneNumbersController {
@@ -10,8 +23,8 @@ public class PhoneNumbersController {
     private AccountsService accountsService;
 
     @GetMapping(path = "/{id}")
-    public ResponseEntity<PhoneNumberDAO> getPhoneNumber(@PathVariable long id) {
-        PhoneNumberDAO phoneNumber = phoneNumbersService.get(id);
+    public ResponseEntity<PhoneNumberDTO> getPhoneNumber(@PathVariable long id) {
+        PhoneNumberDTO phoneNumber = phoneNumbersService.get(id);
         if (phoneNumber == null)
             return new ResponseEntity<>(HttpStatus.NOT_FOUND);
         else
@@ -19,39 +32,40 @@ public class PhoneNumbersController {
     }
 
     @GetMapping
-    public ResponseEntity<List<PhoneNumberDAO>> getPhoneNumbers() {
+    public ResponseEntity<Collection<PhoneNumberDTO>> getPhoneNumbers() {
         return new ResponseEntity<>(phoneNumbersService.findAll(), HttpStatus.OK);
     }
 
     @PostMapping
-    public ResponseEntity<PhoneNumberDAO> postPhoneNumber(@RequestParam(value = "number") String number,
+    public ResponseEntity<PhoneNumberDTO> postPhoneNumber(@RequestParam(value = "number") String number,
                                                           @RequestParam(value = "accountId") long accountId) {
-        AccountADO account = accountsService.get(accountId);
-        if (account == null)
-            return new ResponseEntity<>(HttpStatus.UNPROCESSABLE_ENTITY);
-        PhoneNumberDAO phoneNumber = new PhoneNumberDAO();
+        AccountDTO account = new AccountDTO();
+        account.setId(accountId);
+
+        PhoneNumberDTO phoneNumber = new PhoneNumberDTO();
         phoneNumber.setAccount(account);
         phoneNumber.setNumber(number);
-        return new ResponseEntity<>(phoneNumbersService.save(phoneNumber), HttpStatus.CREATED);
+        phoneNumber = phoneNumbersService.saveNew(phoneNumber);
+        if (phoneNumber == null)
+            return new ResponseEntity<>(HttpStatus.UNPROCESSABLE_ENTITY);
+        else
+            return new ResponseEntity<>(phoneNumber, HttpStatus.CREATED);
     }
 
     @PutMapping(path = "/{id}")
-    public ResponseEntity<PhoneNumberDAO> putPhoneNumber(@PathVariable long id,
+    public ResponseEntity<PhoneNumberDTO> putPhoneNumber(@PathVariable long id,
                                                          @RequestParam(value = "number", required = false) String number,
                                                          @RequestParam(value = "accountId", required = false) Long accountId) {
-        PhoneNumberDAO phoneNumber = phoneNumbersService.get(id);
+        PhoneNumberDTO phoneNumber;
+        try {
+            phoneNumber = phoneNumbersService.update(id, number, accountId);
+        } catch (Exception e) {
+            return new ResponseEntity<>(HttpStatus.UNPROCESSABLE_ENTITY);
+        }
         if (phoneNumber == null)
             return new ResponseEntity<>(HttpStatus.NOT_FOUND);
-
-        if (accountId != null) {
-            AccountADO account = accountsService.get(accountId);
-            if (account == null)
-                return new ResponseEntity<>(HttpStatus.UNPROCESSABLE_ENTITY);
-            phoneNumber.setAccount(account);
-        }
-        if (number != null)
-            phoneNumber.setNumber(number);
-        return new ResponseEntity<>(phoneNumbersService.save(phoneNumber), HttpStatus.OK);
+        else
+            return new ResponseEntity<>(phoneNumber, HttpStatus.OK);
     }
 
     @DeleteMapping(path = "/{id}")
@@ -64,4 +78,3 @@ public class PhoneNumbersController {
         }
     }
 }
-*/
